--- a/style.css
+++ b/style.css
@@ -13,11 +13,20 @@
 ul{
     list-style: none;
     text-align: center;
+    padding: 0;
+}
+
+p{
+    margin-top: 0;
+    width: auto;
+    height: 0;
 }
 
 a{
     color:inherit;
     text-decoration: none;
+    max-width: 100%;
+    height: auto;
 }
 
 a:hover{
@@ -35,35 +44,43 @@ body {
 
 .wrapper{
     max-width: 1781px;
-    margin: 0;
-    padding: 10px;
+    margin: 0 auto;
+    padding: 0px;
 }
 
 header{
+    display: flex;
+    flex-direction: row;
     background: var(--white-color);
    position: fixed;
     }
 
 nav{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     position:fixed;
     width: 95%;
     min-width: 200px;
     font-family: "Roboto";
     font-size: 24px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     border-bottom: var(--black-color) 2px solid;
     margin: 0px 0px 0px 20px; 
     padding: 5px 80px 5px 80px;  
-    background-color: var(--white-color)
+    transition: all 500ms ease;
+    background-color: var(--white-color);
+}
+
+nav.scrolled{
+    background-color: var(--white-color);
+    box-shadow: 0 16px 14px -8px rgba(0, 0, 0, 0.3);
+    top: 0;
 }
 
 .nav .navleft {
     display: flex;
-    align-items: center;
+    flex-direction: row;
     margin: 150px;
 }
 
@@ -82,14 +99,16 @@ nav{
     height: 100vh;
     width: 100%;
     align-items: center;
+    align-content: space-evenly;
+
 }
 
 .slide1 .center{
     display: flex;
     content: url('/images/Artframes.png');
-    height: 70%;
-    width: 60%;
-    margin-left: 200px;
+    height: 80%;
+    width: 75%;
+    margin-left: 00px;
 }
 
 .slide1 .left{
@@ -98,17 +117,14 @@ nav{
     flex-direction: column;
     padding: 0px 10px 30px 30px;
     color: var(--black, #000);
-    font-family: "Roboto Mono", sans-serif;
-    font-size: 16px;
-    font-style: none;
+    
 }
 
 .slide1 .left h1{
     color: var(--black, #000);
-    font-family: "Roboto Mono", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 36px;
-    font-style: normal;
-    line-height: normal;
+    font-weight:900;
     margin-bottom: 0px;
     margin-left: 100px;
     display: flex;
@@ -117,6 +133,9 @@ nav{
 .slide1 .left h2{
     display: flex;
     color:var(--grey-color);
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    font-weight:800;
     margin-left: 250px;
 }
 
@@ -135,14 +154,14 @@ nav{
 .slide2{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 0px 700px 0px 0px;
+    justify-content: space-around;
+    max-width: 70%;
+    height: auto;
 }
 
 .divleft{
     display: flex;
     flex-wrap: wrap;
-    margin-left: 110px;
 }
 .divright{
     display: flex;
@@ -172,12 +191,13 @@ nav{
     display: flex;
     align-items: center;
     margin-left: 100px;
+    margin-top: 50px;
     color: -#D1D5DB;
     font-family: "Roboto";
     font-size: 26px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
+    max-width: 70%;
+    height: auto;
 }
 
 .piedepagina{
@@ -188,10 +208,12 @@ nav{
     max-width: 70%;
     border-radius: 15px;
     margin-left: 100px;
+    margin-top: 50px;
     font-family: "Roboto";
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
+    width: 100%;
+    max-width: 70%;
+    
 }
 
 .copyright{
@@ -210,12 +232,14 @@ nav{
 .leftcatalog{
     display: flex;
     flex-wrap: wrap;
+    
 }
 
 .leftProduct{
     display: flex;
     padding-left: 180px;
     flex-direction: column;
+    align-items: flex-start;
     align-items: center;
 }
 
@@ -254,9 +278,121 @@ nav{
 }
 
 .slide3 .h1{
-    font-family: "Roboto Mono", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 36px;
-    font-style: normal;
-    line-height: normal;
+    font-weight: 100;
     color: var(--grey-color);
+}
+
+.menuIcon{
+    display: flex;
+    width: 24px;
+    height: 24px;
+}
+
+.menuContainer{
+    display: flex;
+    flex-direction: column;
+    height: 0;
+    width: 100%;
+    top: 0;
+    left: 100%;
+    align-items: center;
+    border-radius: 15px;
+    border: 2px dashed var(--black-color);
+    z-index: 200;
+    transition: all 400ms ease-in;
+    opacity: 0;
+
+}
+
+.menuContainer.active{
+    opacity: 1;
+    height: 50vh;
+    margin: 10px;
+    background-color: var(--grey-color);
+}
+
+.menuContainer .closeIcon{
+    margin-top: 10px;
+    pointer-events:none;
+    transition: all 400ms ease;
+}
+
+.menuContainer.active .closeIcon{
+    opacity: 1;
+    pointer-events: auto;
+    transition: all 400ms ease;
+}
+
+
+@media(max-width: 1600px){
+    .wrapper{
+        padding: 0 100px;
+    }
+
+    nav{
+        width: 100%;
+        left: 0;
+        right: 0;
+        padding: 10px 100px;
+    }
+    nav.scrolled{
+        padding: 16px 100px;
+    }
+    .slide2{
+        width: 70%;
+        margin-left: 50px;        
+        display: flex;
+        justify-content: center;
+        align-content:center; }
+    .slide1{
+        width: 60vh;
+        height: 70vh;
+        display: flex;
+        justify-content: flex-start;
+        align-content:center; 
+    }
+    .slide3{
+        width: 100%;
+        font-size: 90%;
+        display: flex;
+        justify-content: center;
+        align-content:center; 
+    }
+    .piedepagina{
+        display: flex;
+        justify-content: center;
+        align-content:center; 
+    }
+
+    .divleft{
+        width: 100%;
+    }
+    .divright{
+        margin-left: 50px;
+        width: 100%;
+    }
+    ul{
+        list-style: none;
+        text-align: center;
+    }
+    
+    a{
+        color:inherit;
+        text-decoration: none;
+        max-width: 100%;
+        height: auto;
+    }
+    
+    a:hover{
+        text-decoration: underline;
+    }
+    p{
+        margin-top: 0;
+        width: auto;
+        height: 0;
+    }
+    
+       
 }
