--- a/style.css
+++ b/style.css
@@ -372,44 +372,15 @@ nav.scrolled{
   .error-message {
     color: red;
   }
-  
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+
+  .registerForm{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-form {
-    width: 300px;
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-input[type="email"],
-input[type="password"],
-button {
-    width: 100%;
-    margin-bottom: 10px;
+    flex-direction: column;
     padding: 10px;
-    box-sizing: border-box;
-}
-
-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
+    justify-content: center;
+    align-content: center;
+    
+  }
 
 
 @media(max-width: 1600px){
