--- a/style.css
+++ b/style.css
@@ -388,6 +388,7 @@ nav.scrolled{
 
 
 @media(max-width: 1600px){
+    
     .wrapper{
         padding: 0 100px;
     }
@@ -454,6 +455,166 @@ nav.scrolled{
         width: auto;
         height: 0;
     }
-    
-       
 }
+
+@media(max-width: 1100px){
+    
+    .wrapper{
+        padding: 0 100px;
+    }
+    img{
+        flex-grow: 1;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    nav{
+        width: 100%;
+        left: 0;
+        right: 0;
+        padding: 10px 100px;
+    }
+    nav.scrolled{
+        padding: 16px 100px;
+    }
+    
+    .slide2{
+        width: 60%;
+        margin-left: 50px;        
+        display: flex;
+        justify-content: center;
+        align-content:center; }
+    .slide1{
+        width: 50vh;
+        height: 50vh;
+        display: flex;
+        padding-top: 30px;
+        justify-content: flex-start;
+        align-content:center; 
+    }
+    .slide3{
+        width: 70%;
+        font-size: 90%;
+        display: flex;
+        justify-content: flex-start;
+        align-content:flex-start; 
+    }
+    .piedepagina{
+        display: flex;
+        justify-content: center;
+        align-content:center; 
+    }
+
+    .divleft{
+        width: 100%;
+    }
+    .divright{
+        margin-left: 50px;
+        width: 100%;
+    }
+    ul{
+        list-style: none;
+        text-align: center;
+    }
+    
+    a{
+        color:inherit;
+        text-decoration: none;
+        max-width: 100%;
+        height: auto;
+    }
+    
+    a:hover{
+        text-decoration: underline;
+    }
+    p{
+        margin-top: 0;
+        width: auto;
+        height: 0;
+    }
+}
+@media(max-width: 667px){
+    
+    .wrapper{
+        padding: 0 00px;
+    }
+    img{
+        flex-grow: 1;
+        max-width: 50%;
+        max-height: 50%;
+    }
+    nav{
+        width: 20%;
+        height: fit-content;
+        left: 0;
+        right: 0;
+        position: sticky;
+    }
+    nav.scrolled{
+        padding: 16px 100px;
+    }
+    
+    .slide2{
+        
+        flex-direction: column;     
+        display: flex;
+        justify-content: center;
+        align-content:center; }
+    .slide1{
+        width: 40vh;
+        height: 40vh;
+        display: flex;
+        padding-top: 30px;
+        justify-content: flex-start;
+        align-content:center; 
+    }
+   
+    .rightFloatingBar{
+        width: 20px;
+        
+    }
+    .rightFloatingBar .img{
+        width: 20px;
+        height: 20px;
+    }
+    .slide3{
+        width: 70%;
+        font-size: 90%;
+        display: flex;
+        justify-content: flex-start;
+        align-content:flex-start; 
+    }
+    .piedepagina{
+        display: flex;
+        justify-content: center;
+        align-content:center; 
+    }
+    ul{
+        list-style: none;
+        text-align: center;
+    }
+    
+    a{
+        color:inherit;
+        text-decoration: none;
+        
+        height: auto;
+    }
+    h1{
+        font-size: 14px;
+    }
+    h2{
+        font-size: 12px;
+    }
+    h3{
+        font-size: 10px;
+    }
+    a:hover{
+        text-decoration: underline;
+    }
+    p{
+        margin-top: 0;
+        width: auto;
+        height: 0;
+    }
+}
+    
