--- a/catalog.css
+++ b/catalog.css
@@ -4,6 +4,16 @@
     --grey-color: #D1D5DB;
 }
 
+a{
+    color:inherit;
+    text-decoration: none;
+    max-width: 100%;
+    height: auto;
+}
+
+a:hover{
+    text-decoration: underline;
+}
 
 *::after,
 *::before,
@@ -119,7 +129,7 @@ nav{
     align-items: center;
 }
 
-.info-product p2{
+.info-product p{
     font-size: 18px;
     font-weight: 800;
 }
@@ -226,3 +236,6 @@ nav{
     display: none;
 }
 
+.hidden-menu{
+    display: none;
+}
