--- a/catalog.css
+++ b/catalog.css
@@ -342,3 +342,110 @@ nav.scrolled{
     display: none;
 }
 
+@media (max-width: 932px) {
+    *::after,
+    *::before,
+    *{
+        margin:0;
+    }
+    .rightFloatingBar{
+        display: none;
+    }
+    nav{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        position:absolute;
+        width: 80%;
+        min-width: 200px;
+        font-family: "Roboto";
+        font-size: 24px;
+        font-weight: 700;
+        border-bottom: var(--black-color) 2px solid;
+        background-color: var(--white-color);
+        margin: 0px 0px 0px 5vh;   
+        transition: all 500ms ease;
+}
+.container-items{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    float: left;
+    margin-left: 0px;
+    margin-top: 10vh;
+    gap: 60px;
+    width: 100%;
+}
+    
+    .rightFloatingBar{
+        display: none;
+    }
+
+    .container-cart-products{
+        position: absolute;
+        top: 50px;
+        right: 0;
+        background-color: var(--grey-color);
+        width: 100%;
+        z-index: 1;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
+        border-radius: 10px;
+    }
+
+    .cart-product{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.20);
+    }
+    
+    .info-cart-product{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 60px;
+        margin-left: 20px;
+    }
+    
+    .titulo-producto-carrito{
+        font-size: 10px;
+    }
+    
+    .precio-producto-carrito{
+        font-weight: 700;
+        font-size: 10px;
+        margin-left: 10px;
+    }
+    
+    .cantidad-producto-carrito{
+        font-weight: 600;
+        font-size: 8px;
+    }
+    
+    .cart-total{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 10px 0;
+        gap: 10px;
+    }
+    
+    .cart-total h3{
+        font-size: 16px;
+        font-weight: 700;
+    }
+    
+    .total-pagar{
+        font-size: 16px;
+        font-weight: 700;
+    }
+    
+    .icon-close:hover{
+        background-color: var(--black-color);
+        cursor: pointer;
+    }
+}
