--- a/catalog.css
+++ b/catalog.css
@@ -448,4 +448,79 @@ nav.scrolled{
         background-color: var(--black-color);
         cursor: pointer;
     }
+    .slide2{
+        float:left;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        gap: 10px;
+        max-width: 100%;
+        padding: 50px 10px 0px 20px;
+        height: auto;
+    }
+
+    .spinachClothing img{
+        height: 90%;
+        width: 90%;
+    }
+    
+    .flowers img{
+        height: 90%;
+        width: 70%;
+    }
+    
+    .SALE img{
+        height: 90%;
+        width: 90%;
+    }
+
+    .slide3{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: -#D1D5DB;
+        font-family: "Roboto";
+        font-size: 16px;
+        font-weight: 700;
+        max-width: 50%;
+        padding: 0px 0px 0px 0px;
+        height: auto;
+    }
+
+    .left img{
+        margin-top: 30px;
+        margin-left: 220px;
+        width: 400px;
+        height: 320px;
+    }
+
+    footer{
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .piedepagina{
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-direction: row;
+        background-color: var(--grey-color);
+        border-radius: 10px;
+        font-family: "Roboto";
+        font-size: 8px;
+        font-weight: 500;
+        margin-left: 30px;
+        margin-right: 10px;
+        padding: 0px 0px 0px 0px;
+        width: 400px;
+        gap:20px;
+    }
+
+    
+    .copyright{
+        display: none;           
+    }
+
 }
